--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,13 +20,21 @@
     <section class="main-content">
       <h3> Última atualização</h3>
       {% include resumo-geral.html %}
-      <h3>
+
+      <h3> Casos por habitantes</h3>
+      {% casos-por-habitantes.html %}
 
       <h3> Evolução casos e óbitos</h3>
       {% include evolucao-casos-obitos.html %}
       <h3>
       <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-      <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+      <p></p>
+
+      <h3> Evolução dos óbitos nos bairros com mais casos de COVID-19 </h3>
+      {% evolucao-casos-obitos-bairros-top10.html %}
+      <h3>
+      <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <p></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/doricardo/covid19-rio-de-janeiro">Covid19 na cidade do Rio de Jaeniro</a> is maintained by <a href="https://github.com/doricardo">doricardo</a>.</span>
