--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,8 @@
       <h3> Última atualização</h3>
       {% include resumo-geral.html %}
       <h3>
+      {% include evolucao-casos-obitos.html %}
+      </h3>
 
       <h3> Evolução casos e óbitos</h3>
       {% include evolucao-casos-obitos.html %}
