--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,9 @@
       {% include evolucao-casos-obitos.html %}
       </h3>
       <h3>
+      {% include ultimos-20-dias.html %}
+      </h3>
+      <h3>
       {% include status-semanal.html %}
       </h3>
        <h3>
