--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,8 @@
         font-family: sans-serif;
         min-width: 400px;
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+        padding: 10px;
+        text-align: left;
     }
     </style>
   </head>
