--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,8 @@
     .dataframe {
         border-collapse: collapse;
         margin: 20px 0;
-        font-size: 0.7em;
-        font-family: sans-serif;
+        font-size: 12px;
+        font-family: "Open Sans", verdana, arial, sans-serif;
         min-width: 400px;
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
         padding: 10px;
