--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,9 @@
         padding: 10px;
         text-align: left;
     }
+    th, td {
+      border-bottom: 1px solid #ddd;
+    }
     </style>
   </head>
   <body>
